hphp/hack/test/typecheck/control_flow/for_assign_in_invariant.php.exp
File "for_assign_in_invariant.php", line 55, characters 3-13:
  (exact A | exact B | exact C | exact D)
File "for_assign_in_invariant.php", line 38, characters 54-55:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 58-59:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 36, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 43, characters 15-16:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 26, characters 20-21:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 36, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 38, characters 46-47:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 44-45:
  This is an object of type AB
  File "for_assign_in_invariant.php", line 52, characters 14-14:
  It is incompatible with an object of exactly the class D
File "for_assign_in_invariant.php", line 38, characters 50-51:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 51-52:
  This is an object of type AD
  File "for_assign_in_invariant.php", line 44, characters 14-14:
  It is incompatible with an object of exactly the class B
File "for_assign_in_invariant.php", line 38, characters 54-55:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 58-59:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 36, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 41, characters 15-16:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 24, characters 20-21:
  This is an object of type AB
  File "for_assign_in_invariant.php", line 52, characters 14-14:
  It is incompatible with an object of exactly the class D
File "for_assign_in_invariant.php", line 42, characters 15-16:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 25, characters 20-21:
  This is an object of type AD
  File "for_assign_in_invariant.php", line 44, characters 14-14:
  It is incompatible with an object of exactly the class B
File "for_assign_in_invariant.php", line 43, characters 15-16:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 26, characters 20-21:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 36, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 38, characters 46-47:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 44-45:
  This is an object of type AB
  File "for_assign_in_invariant.php", line 52, characters 14-14:
  It is incompatible with an object of exactly the class D
File "for_assign_in_invariant.php", line 38, characters 50-51:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 51-52:
  This is an object of type AD
  File "for_assign_in_invariant.php", line 44, characters 14-14:
  It is incompatible with an object of exactly the class B
File "for_assign_in_invariant.php", line 38, characters 54-55:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 31, characters 58-59:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 36, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 63, characters 53-54:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 62-63:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 59, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 68, characters 14-15:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 21, characters 19-19:
  This is an object of type E
  File "for_assign_in_invariant.php", line 28, characters 70-71:
  It is incompatible with a nullable type
File "for_assign_in_invariant.php", line 63, characters 45-46:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 48-49:
  This is an object of type AB
  File "for_assign_in_invariant.php", line 77, characters 14-14:
  It is incompatible with an object of exactly the class D
File "for_assign_in_invariant.php", line 63, characters 49-50:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 55-56:
  This is an object of type AD
  File "for_assign_in_invariant.php", line 69, characters 14-14:
  It is incompatible with an object of exactly the class B
File "for_assign_in_invariant.php", line 63, characters 53-54:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 62-63:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 59, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 68, characters 14-15:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 21, characters 19-19:
  This is an object of type E
  File "for_assign_in_invariant.php", line 28, characters 70-71:
  It is incompatible with a nullable type
File "for_assign_in_invariant.php", line 63, characters 45-46:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 48-49:
  This is an object of type AB
  File "for_assign_in_invariant.php", line 77, characters 14-14:
  It is incompatible with an object of exactly the class D
File "for_assign_in_invariant.php", line 63, characters 49-50:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 55-56:
  This is an object of type AD
  File "for_assign_in_invariant.php", line 69, characters 14-14:
  It is incompatible with an object of exactly the class B
File "for_assign_in_invariant.php", line 63, characters 53-54:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 28, characters 62-63:
  This is an object of type BD
  File "for_assign_in_invariant.php", line 59, characters 12-12:
  It is incompatible with an object of exactly the class A
File "for_assign_in_invariant.php", line 81, characters 12-13:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 20, characters 19-19:
  This is an object of type C
  File "for_assign_in_invariant.php", line 28, characters 71-71:
  It is incompatible with an object of type E
File "for_assign_in_invariant.php", line 82, characters 12-13:
Invalid argument (Typing[4110])
  File "for_assign_in_invariant.php", line 21, characters 19-19:
  This is an object of type E
  File "for_assign_in_invariant.php", line 73, characters 14-14:
  It is incompatible with an object of exactly the class C
